[gd_scene load_steps=54 format=2]

[ext_resource path="res://Assets/Fishing Scene/Fishes/scrubfish(thick)_right.PNG" type="Texture" id=1]
[ext_resource path="res://Fish/FishTemplate/FishTemplate.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00032.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00030.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00041.png" type="Texture" id=5]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00040.png" type="Texture" id=6]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00039.png" type="Texture" id=7]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00036.png" type="Texture" id=8]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00038.png" type="Texture" id=9]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00037.png" type="Texture" id=10]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00035.png" type="Texture" id=11]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00034.png" type="Texture" id=12]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00006.png" type="Texture" id=13]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00031.png" type="Texture" id=14]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00029.png" type="Texture" id=15]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00033.png" type="Texture" id=16]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00008.png" type="Texture" id=17]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00004.png" type="Texture" id=18]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00013.png" type="Texture" id=19]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00010.png" type="Texture" id=20]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00018.png" type="Texture" id=21]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00017.png" type="Texture" id=22]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00021.png" type="Texture" id=23]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00001.png" type="Texture" id=24]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00009.png" type="Texture" id=25]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00007.png" type="Texture" id=26]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00003.png" type="Texture" id=27]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00014.png" type="Texture" id=28]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00011.png" type="Texture" id=29]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00005.png" type="Texture" id=30]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00016.png" type="Texture" id=31]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00002.png" type="Texture" id=32]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00012.png" type="Texture" id=33]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00020.png" type="Texture" id=34]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00015.png" type="Texture" id=35]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00019.png" type="Texture" id=36]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00022.png" type="Texture" id=37]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00024.png" type="Texture" id=38]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00026.png" type="Texture" id=39]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00028.png" type="Texture" id=40]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00027.png" type="Texture" id=41]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00025.png" type="Texture" id=42]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Ripple full loop/full loop_00023.png" type="Texture" id=43]
[ext_resource path="res://Assets/radial_background.png" type="Texture" id=44]
[ext_resource path="res://Assets/radial_bar.png" type="Texture" id=45]
[ext_resource path="res://Fish/FishTemplate/ProgressBar.gd" type="Script" id=46]
[ext_resource path="res://Assets/Fishing Scene/Fishes/scrubfish(thick)_left.PNG" type="Texture" id=47]

[sub_resource type="CircleShape2D" id=1]
radius = 40.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 47 ) ],
"loop": true,
"name": "FacingLeft",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "FacingRight",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 24 ), ExtResource( 32 ), ExtResource( 27 ), ExtResource( 18 ), ExtResource( 30 ), ExtResource( 13 ), ExtResource( 26 ), ExtResource( 17 ), ExtResource( 25 ), ExtResource( 20 ), ExtResource( 29 ), ExtResource( 33 ), ExtResource( 19 ), ExtResource( 28 ), ExtResource( 35 ), ExtResource( 31 ), ExtResource( 22 ), ExtResource( 21 ), ExtResource( 36 ), ExtResource( 34 ), ExtResource( 23 ), ExtResource( 37 ), ExtResource( 43 ), ExtResource( 38 ), ExtResource( 42 ), ExtResource( 39 ), ExtResource( 41 ), ExtResource( 40 ), ExtResource( 15 ), ExtResource( 4 ), ExtResource( 14 ), ExtResource( 3 ), ExtResource( 16 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "Ripple",
"speed": 24.0
} ]

[sub_resource type="Animation" id=4]
length = 1.70833
loop = true
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("RippleSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Ripple" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RippleSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833334, 0.125, 0.166667, 0.208334, 0.25, 0.291667, 0.333334, 0.375, 0.416667, 0.458334, 0.5, 0.541667, 0.583334, 0.625001, 0.666667, 0.708334, 0.750001, 0.791667, 0.833334, 0.875001, 0.916667, 0.958334, 1, 1.04167, 1.08333, 1.125, 1.16667, 1.20833, 1.25, 1.29167, 1.33333, 1.375, 1.41667, 1.45833, 1.5, 1.54167, 1.58333, 1.625 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40 ]
}

[sub_resource type="CircleShape2D" id=5]
resource_local_to_scene = true
radius = 173.142

[sub_resource type="CircleShape2D" id=6]
radius = 45.3792

[node name="FishTemplate" type="Node2D"]
script = ExtResource( 2 )

[node name="KinematicBody" type="KinematicBody2D" parent="."]
collision_layer = 16

[node name="ProgressBar" type="TextureProgress" parent="KinematicBody"]
margin_left = -6.0
margin_top = -152.77
margin_right = 180.0
margin_bottom = 33.2298
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 93, 93 )
step = 0.1
texture_under = ExtResource( 44 )
texture_progress = ExtResource( 45 )
fill_mode = 4
script = ExtResource( 46 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="KinematicBody/ProgressBar"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody"]
shape = SubResource( 1 )

[node name="FishSprite" type="AnimatedSprite" parent="KinematicBody"]
scale = Vector2( 0.063, 0.063 )
frames = SubResource( 2 )
animation = "FacingRight"

[node name="RippleSprite" type="AnimatedSprite" parent="KinematicBody"]
scale = Vector2( 0.125, 0.125 )
frames = SubResource( 3 )
animation = "Ripple"
frame = 1

[node name="RippleAnimation" type="AnimationPlayer" parent="KinematicBody"]
anims/Ripple = SubResource( 4 )

[node name="ProximityArea" type="Area2D" parent="KinematicBody"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody/ProximityArea"]
shape = SubResource( 5 )

[node name="Hurtbox" type="Area2D" parent="KinematicBody"]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody/Hurtbox"]
shape = SubResource( 6 )

[node name="CheckBobberInProximityAreaTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="RecoveryTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="body_entered" from="KinematicBody/ProximityArea" to="." method="_on_ProximityArea_body_entered"]
[connection signal="body_exited" from="KinematicBody/ProximityArea" to="." method="_on_ProximityArea_body_exited"]
[connection signal="body_entered" from="KinematicBody/Hurtbox" to="." method="_on_Hurtbox_body_entered"]
[connection signal="timeout" from="CheckBobberInProximityAreaTimer" to="." method="_on_CheckBobberInProximityAreaTimer_timeout"]
[connection signal="timeout" from="RecoveryTimer" to="." method="_on_RecoveryTimer_timeout"]
